feature(event-store): stream event on/from the filesystem
This will mainly improve the fetch history performance.
On write we are not yet fully in a stream mode: this will indroduce concistancy issue to manage. For now we love 💋

--- a/packages/event-store/package.json
+++ b/packages/event-store/package.json
@@ -29,5 +29,9 @@
     "integration": "echo 'Nothing to do'",
     "qa": "yarn format:check && yarn flow:check",
     "test": "jest"
+  },
+  "dependencies": {
+    "jsonlines": "^0.1.1",
+    "stream-array": "^1.1.2"
   }
 }
