--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["config:js-lib", "config:monorepo"],
+  "extends": ["config:js-lib"],
   "semanticCommits": true,
   "rebaseStalePrs": true,
   "automerge": true,
